--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     <div class="section-inner">
                         <h2 class="heading">About Me</h2>
                         <div class="content">
-                            <p>I am a Software Developer / Engineer based in Tangerang,Banten,ID. Currently I'm working at citcall.com helping folks level up with PHP.</p>
+                            <p>I am a Software Developer / Engineer based in Tangerang,Banten,ID. Currently I'm working at <a href="https://citcall.com" target="_blank">citcall.com</a> helping folks level up with PHP.</p>
                         </div><!--//content-->
                     </div><!--//section-inner-->                 
                 </section><!--//section-->
@@ -216,7 +216,7 @@
                                     </div><!--//level-bar-->                                 
                                 </div><!--//item-->
                                 <div class="item">
-                                    <h3 class="level-title">PHP &amp; Laravel<span class="level-label" data-toggle="tooltip" data-placement="left" data-animation="true" title="PHP 7 with Laravel 7"><i class="fas fa-info-circle"></i>Intermediate</span></h3>
+                                    <h3 class="level-title">PHP &amp; Laravel<span class="level-label" data-toggle="tooltip" data-placement="left" data-animation="true" title="PHP 7/8 with Laravel 7/8"><i class="fas fa-info-circle"></i>Intermediate</span></h3>
                                     <div class="level-bar">
                                         <div class="level-bar-inner" data-level="70%">
                                         </div>                                      
@@ -243,7 +243,6 @@
                                         </div>                                      
                                     </div><!--//level-bar-->                                 
                                 </div><!--//item-->
-                                <p><a class="more-link" href="#"><i class="fas fa-external-link-alt"></i>More on Coderwall</a></p> 
                             </div>              
                         </div><!--//content-->  
                     </div><!--//section-inner-->                 
@@ -253,7 +252,7 @@
                         <h2 class="heading">Education</h2>
                         <div class="content">
                             <div class="item">                      
-                                <h3 class="title"><i class="fas fa-graduation-cap"></i> BSc (S1) - Computer Science (Teknik Informatika)</h3>
+                                <h3 class="title"><i class="fas fa-graduation-cap"></i> BCompSc (S1) - Computer Science (Teknik Informatika)</h3>
                                 <h4 class="university">Universitas Satya Negara Indonesia <span class="year">(2020)</span></h4>
                             </div><!--//item-->
                         </div><!--//content-->
@@ -273,6 +272,14 @@
                                     <span class="level">Native Speaker <br class="visible-sm visible-xs"/><i class="fas fa-star"></i> <i class="fas fa-star"></i> <i class="fas fa-star"></i></i><i class="fas fa-star"></i><i class="fas fa-star"></i></span>
                                 </li><!--//item-->
                             </ul>
+                        </div><!--//content-->
+                    </div><!--//section-inner-->
+                </aside><!--//section-->
+                <aside class="hire me aside section" id="hireMe">
+                    <div class="section-inner">
+                        <h2 class="heading">Hire me as Freelancer</h2>
+                        <div class="content">
+                            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modalHire">Click to Hire Me</button>
                         </div><!--//content-->
                     </div><!--//section-inner-->
                 </aside><!--//section-->
@@ -313,6 +320,43 @@
                 <small class="copyright">Designed with <i class="fas fa-heart"></i> by <a href="https://themes.3rdwavemedia.com" target="_blank">Xiaoying Riley</a> for developers</small>
         </div><!--//container-->
     </footer><!--//footer-->
+    <!-- Modal -->
+    <div class="modal fade bd-example-modal-lg" id="modalHire" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">Hire Me</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
+            </div>
+            <div class="modal-body">
+                <form class="form">
+                    <div class="form-group">
+                        <label for="name" >Your Name </label>
+                        <input type="text" class="form-control" id="name" aria-describedby="nameHelp" placeholder="Please Enter Your Name">
+                    </div>
+                    <div class="form-group">
+                        <label for="contact">How Can I Contact You </label>
+                        <input type="text" class="form-control" id="contact" aria-describedby="nameHelp" placeholder="Phone number, email or anything.">
+                    </div>
+                    <div class="form-group">
+                        <label for="req">Please Describe Your Requirement </label>
+                        <textarea placeholder="Please Describe Your Requirement" id="req" class="form-control"></textarea>
+                    </div>
+                </form>
+            </div>
+            <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-primary" onclick="sendMsg()" id="btnSubmit">Submit</button>
+            <button class="btn btn-primary" type="button" disabled style="display: none;" id="btnLoader">
+                <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+                Loading...
+            </button>
+            </div>
+        </div>
+        </div>
+    </div>
     <!-- Javascript -->          
     <script type="text/javascript" src="assets/plugins/jquery-3.3.1.min.js"></script>
     <script type="text/javascript" src="assets/plugins/popper.min.js"></script> 
